tests/negative/test_type_arr_size_not_num.orb
let a:(i32 'a');

fnc main() () {};